fixed issues with forecast card stretching

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,8 @@
   text-align: center;
   padding: 10px 25px 10px 25px;
   flex: 150px;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .locationBanner {
