--- a/src/components/DisplayWeather/NextFiveDays/NextFiveDays.css
+++ b/src/components/DisplayWeather/NextFiveDays/NextFiveDays.css
@@ -6,8 +6,7 @@
 
 .card-container{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     gap: 2vw;
